--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,9 @@ on:
         required: true
         default: "cn-hangzhou"
       acr-registry:
-        description: "ACR registry domain, e.g., registry.cn-hangzhou.aliyuncs.com"
+        description: "ACR registry domain, e.g., registry.ap-southeast-3.aliyuncs.com"
         required: true
+        default: "registry.ap-southeast-3.aliyuncs.com"
 jobs:
   build-test-and-push:
     runs-on: ubuntu-latest
@@ -69,7 +70,7 @@ jobs:
 
       - name: 登录阿里云 ACR
         run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username=${{ secrets.ACR_USERNAME }} registry.cn-hangzhou.aliyuncs.com --password-stdin
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username=${{ secrets.ACR_USERNAME }} ${{ inputs.acr-registry }} --password-stdin
 
       # 04. 自動檢查並建立 ECR Repository
       - name: 04. 自動檢查並建立 ECR Repository
